--- a/app/src/main/res/layout/fragment_bottom_sticker_emoji_dialog.xml
+++ b/app/src/main/res/layout/fragment_bottom_sticker_emoji_dialog.xml
@@ -7,7 +7,7 @@
     android:orientation="vertical">
 
 
-    <android.support.constraint.ConstraintLayout
+    <androidx.constraintlayout.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_marginEnd="16dp"
@@ -57,7 +57,7 @@
             app:layout_constraintTop_toTopOf="parent" />
 
 
-    </android.support.constraint.ConstraintLayout>
+    </androidx.constraintlayout.ConstraintLayout>
 
 </LinearLayout>
 
